<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TaskManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Notifications</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile">Profile</string>
    <string name="tittle">Tittle</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="desc">Desc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="get_started">Get Started</string>
    <string name="skip">skip</string>
    <string name="Удалить">Удалить</string>
    <string name="delete_tittle">Удаление задачи</string>
    <string name="delete_message">Вы уверены, что хотите удалить эту задачу?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Phone">Phone</string>
    <string name="Code">Code</string>
    <string name="Send">Send Code</string>
    <string name="accept">accept</string>
    <string name="_996">+996</string>
</resources>