<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.TaskFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tittle"/>

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"/>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>